	* cray_pointers_2.f90: Add -fbounds-check compile flag.

PR fortran/27786
	* trans-array.c (gfc_conv_array_ref): Eliminate bounds checking
	for assumed-size Cray pointees.



git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@114495 138bc75d-0d04-0410-961f-82ee72b054a4